# HinfoBot

./: HinfoBot.cabal  LICENSE  README.md  build.sh  hie.yaml  stack.yaml
lib/: NewsAPI.hs
lib/test/: Test.hs
src/: Main.hs
src/Command/: Definitions.hs  Execution.hs  Parsing.hs  Types.hs
src/command/: CommandExecution.hs  CommandParsing.hs  Commands.hs  Types.hs
