name:                HinfoBot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HinfoBot#readme
license:             BSD3
license-file:        LICENSE
author:              C-alcium 
maintainer:          62979683+C-alcium@users.noreply.github.com
copyright:           2020 C-alcium 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

test-suite NewsAPITests
  type:            exitcode-stdio-1.0
  hs-source-dirs: ./lib/test
  main-is: Test.hs
  build-depends:   base >= 4.7 && < 5
                 , HUnit
                 , HinfoBot


library
  exposed-modules:
      NewsAPI
  hs-source-dirs:
      lib
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , aeson
                     , http-client
                     , http-client-tls
                     , time
                     , split
                     , HUnit

executable HinfoBot
  hs-source-dirs:      
      src
  main-is:             
      Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , HinfoBot
                     , time
                     , split
                     , servant
                     , servant-client
                     , aeson
                     , http-client
                     , http-client-tls
                     , HUnit 
                     , discord-haskell
                     , text
                     , megaparsec
                     , transformers

