name:                HinfoBot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HinfoBot#readme
license:             BSD3
license-file:        LICENSE
author:              C-alcium
maintainer:          62979683+C-alcium@users.noreply.github.com
copyright:           2020 C-alcium
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

test-suite NewsAPITests
  type:            exitcode-stdio-1.0
  hs-source-dirs: ./lib/test
  main-is: Test.hs
  build-depends:   base >= 4.7 && < 5
                 , HUnit
                 , HinfoBot

library
  exposed-modules:
        NewsAPI
      , Command.Definitions
      , Command.Parsing
      , Command.Execution
      , Command.Types
  hs-source-dirs:
        lib
      , src
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , aeson
                     , http-client
                     , http-client-tls
                     , time
                     , split
                     , discord-haskell
                     , text
                     , megaparsec
                     , transformers
                     , HUnit
                     , hslogger
                     , containers

executable HinfoBot
  hs-source-dirs:
      src
  main-is:
      Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , HinfoBot
                     , time
                     , split
                     , servant
                     , servant-client
                     , aeson
                     , http-client
                     , http-client-tls
                     , HUnit
                     , discord-haskell
                     , text
                     , megaparsec
                     , transformers
                     , hslogger
                     , containers

